# SWITAA

./: .env.example  .gitignore  README.md  requirements.txt
CSV/: FR_AMAZON_blackBoxProducts_1_2026-03-04.csv  FR_AMAZON_blackBoxProducts_2_2026-03-04.csv  FR_AMAZON_blackBoxProducts_3_2026-03-04.csv  FR_AMAZON_blackBoxProducts_4_2026-03-04.csv  FR_AMAZON_blackBoxProducts_5_2026-03-04.csv  FR_AMAZON_blackBoxProducts_6_2026-03-04.csv  FR_AMAZON_blackBoxProducts_7_2026-03-04.csv  FR_AMAZON_blackBoxProducts_8_2026-03-04.csv
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_add_campaigns_and_product_fields.py  add_campaign_id_to_opportunities.py
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_campaigns.py  routes_dashboard.py  routes_discover.py  routes_export.py  routes_listings.py  routes_marketplace.py  routes_products.py  routes_scoring.py  routes_suppliers.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  listing.py  marketplace.py  opportunity.py  product.py  search_campaign.py  supplier.py  user.py
backend/app/services/: amazon_search_service.py  csv_import_service.py  discover_service.py  enrichment_service.py  export_service.py  helium10_service.py  keepa_client.py  marketplace_push_service.py  profitability_service.py  research_pipeline.py  scoring_service.py  sourcing_export_service.py  spapi_client.py  spapi_enrichment_service.py  supplier_feed_service.py
deploy/: hetzner.py
frontend/: Dockerfile  package.json
(+66 files in other folders)
